--- a/source/R5T.Visigothia.Default.Local/R5T.Visigothia.Default.Local.csproj
+++ b/source/R5T.Visigothia.Default.Local/R5T.Visigothia.Default.Local.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.Dacia.Extensions\source\R5T.Dacia.Extensions\R5T.Dacia.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0062\source\R5T.T0062.X001\R5T.T0062.X001.csproj" />
     <ProjectReference Include="..\..\..\R5T.Visigothia.Base\source\R5T.Visigothia.Base\R5T.Visigothia.Base.csproj" />
   </ItemGroup>
 </Project>
