--- a/source/R5T.Visigothia.Default.Local.Construction/R5T.Visigothia.Default.Local.Construction.csproj
+++ b/source/R5T.Visigothia.Default.Local.Construction/R5T.Visigothia.Default.Local.Construction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\R5T.Visigothia.Default.Local\R5T.Visigothia.Default.Local.csproj" />
   </ItemGroup>
